modified:   _attachments/script/detailstuff.js 	new file:   _attachments/script/detailstuff.js.ios0~ 	new file:   _attachments/script/detailstuff.js.snoplus~ 	modified:   _attachments/style/main.css 	modified:   shows/alarms.js 	new file:   shows/alarms.js.backup.ios0~ 	new file:   shows/alarms.js.backup~ 	new file:   shows/alarms.js.couch~ 	modified:   shows/detail.js 	new file:   shows/detail.js.couch~ 	modified:   templates/alarms.html 	new file:   templates/alarms.html.backup.ios0~ 	new file:   templates/backup/alarms.html.backup2~ 	new file:   templates/backup/alarms.html.backup3~ 	renamed:    templates/alarms.html.backup~ -> templates/backup/alarms.html.backup~ 	new file:   templates/backup/alarms.html.couch~ 	renamed:    templates/detail.html.backup2~ -> templates/backup/detail.html.backup2~ 	renamed:    templates/detail.html.backup3~ -> templates/backup/detail.html.backup3~ 	renamed:    templates/detail.html.backup4~ -> templates/backup/detail.html.backup4~ 	renamed:    templates/detail.html.backup5~ -> templates/backup/detail.html.backup5~ 	renamed:    templates/detail.html.backup6~ -> templates/backup/detail.html.backup6~ 	renamed:    templates/detail.html.backup7~ -> templates/backup/detail.html.backup7~ 	renamed:    templates/detail.html.backup~ -> templates/backup/detail.html.backup~ 	new file:   templates/backup/detail.html.couch~ 	modified:   templates/detail.html

--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -11,7 +11,29 @@ h1 {
 #account {
   float:right;
 }
-
+.box{
+background-color:green;
+border:1px solid #000;
+float:left;
+}
+.big{
+width:100px;
+height:61px;
+float:left;
+text-align:center;
+}
+.one{
+width:49px;
+height:25px;
+float:left;
+text-align:center;
+}
+.two{
+width:98px;
+height:25px;
+float:left;
+text-align:center;
+}
 .racks{
 width:120px;
 height:150px;
