--- a/templates/slowcontrol.html
+++ b/templates/slowcontrol.html
@@ -2,24 +2,27 @@
 <html>
   <head>
     <title>Alarms Overview</title> {{!comment}}
-    <link rel="stylesheet" href="/slowcontrol-channeldb/_design/slowcontrol/style/main.css" type="text/css">
+    <link rel="stylesheet" href="/slowcontrol/_design/slowcontrol/style/main.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/_utils/script/json2.js"></script>
-    <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+    <!-- script src="http://code.jquery.com/jquery-1.8.2.min.js"></script -->
 
-    <!-- script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
-    <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script -->
-
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.js"></script>
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.mobile.js"></script>
-    <link rel="stylesheet" href="/slowcontrol-channeldb/_design/slowcontrol/style/jquery.mobile.css" type="text/css">
-
+    <script src="../../script/jquery.js"></script>
+    <script src="../../script/jquery.mobile.js"></script>
+    <link rel="stylesheet" href="../../style/jquery.mobile.css" type="text/css">
 
     <script src="/_utils/script/jquery.couch.js"></script>
     <script src="../../vendor/couchapp/jquery.couch.app.js"></script>
     <script src="../../vendor/couchapp/jquery.couch.app.util.js"></script>
-    <script src="../../script/app.js"></script>
+    <!-- script src="../../script/app.js"></script -->
+    
+    <script src="../../script/highcharts.js" type="text/javascript"></script>
+    <script src="../../script/themes/grid.js" type="text/javascript"></script> 
+    <script src="../../script/modules/exporting.js" type="text/javascript"></script>
+
+    <script src="../../script/highslide/highslide-full.min.js" type="text/javascript"></script>
+    <script src="../../script/highslide/highslide.config.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/slowcontrol/_design/slowcontrol/style/highslide.css" />
   </head>
   <body>
     <div data-role="page" id="alarmsdetail">
@@ -29,8 +32,9 @@
         <a href="#alarmsoverview">Overview</a>
         <a href="#alarmsdetail">Detail</a>
         <a href="#alarmslist">List</a>
+        <a href="#thresholds">Thresholds</a>
+        <a href="#graphs">Graphs</a>
       </div>
-      <div id="statustext"></div>
       <div id="wheretext"></div>
       <div style="width:100%;height:175px">
         <div>
@@ -100,8 +104,9 @@
         <a href="#alarmsoverview">Overview</a>
         <a href="#alarmsdetail">Detail</a>
         <a href="#alarmslist">List</a>
+        <a href="#thresholds">Thresholds</a>
+        <a href="#graphs">Graphs</a>
       </div>
-      <div id="statustext"></div>
       <div id="wheretext"></div>
 
       <div id="racks" style="width:100%;float:left;clear:both">
@@ -161,17 +166,80 @@
         <a href="#alarmsoverview">Overview</a>
         <a href="#alarmsdetail">Detail</a>
         <a href="#alarmslist">List</a>
+        <a href="#thresholds">Thresholds</a>
+        <a href="#graphs">Graphs</a>
       </div>
-      <div id="statustext"></div>
       <div id="wheretext"></div>
-      <div id="alarmlist" style="width:100%;float:left;clear:both">
-        Alarm list 
-      </div>
+      Alarm list 
+      <div id="alarmlist" style="width:100%;float:left;clear:both"></div>
     </div>
 
+    <div data-role="page" id="thresholds">
+      <div id="account"></div>
+      <h1>Slow Control Alarm Thresholds</h1>
+      <div id="navigation">
+        <a href="#alarmsoverview">Overview</a>
+        <a href="#alarmsdetail">Detail</a>
+        <a href="#alarmslist">List</a>
+        <a href="#thresholds">Thresholds</a>
+        <a href="#graphs">Graphs</a>
+      </div>
+      <div id="statustext"></div>
+      <div id="statustext1"></div>
+      <div class="wideColumn">
+        <button id="fillPresentThresholds" class="niceButton" data-role="none">Fill Present Thresholds</button>
+        <button id="fillApprovedThresholds" class="niceButton" data-role="none">Fill Approved Thresholds</button>
+      </div>
+      <div class="wideColumn" style="clear:none">
+        <button id="showPresentThresholds" class="niceButton" data-role="none">Show Present Thresholds</button>
+        <button id="showApprovedThresholds" class="niceButton" data-role="none">Show Approved Thresholds</button>
+      </div>
+      <div class="wideColumn" style="clear:none">
+        <button id="hidePresentThresholds" class="niceButton" data-role="none">Hide Present Thresholds</button>
+        <button id="hideApprovedThresholds" class="niceButton" data-role="none">Hide Approved Thresholds</button>
+      </div>
+      <div class="wideColumn" style="clear:none" data-role="none">
+        <button id="refreshPresent" class="niceButton" data-role="none">Refresh Present Values</button>
+      </div>
+      <button id="saveThresholds" class="niceButton" data-role="none">Save Thresholds</button>
+      <!-- button id="format" class="niceButton" data-role="none">Format</button -->
+      <div id="approval" style="display:none">
+        Approve: <input type="checkbox" label="Approve:" id="approved" data-role="none" />
+      </div>
+      <div class="header">
+        <div class="wideColumn">Channel Name</div>
+        <div class="narrowColumn">LoLo</div>
+        <div class="narrowColumn">Lo</div>
+        <div class="narrowColumn">Presently</div>
+        <div class="narrowColumn">Hi</div>
+        <div class="narrowColumn">HiHi</div>
+        <div class="narrowColumn">Enabled</div>
+      </div>
+      <div id="everything"></div>
+    </div>
+
+    <div data-role="page" id="graphs">
+      <h1>Slow Control Graphs</h1>
+      <div id="navigation">
+        <a href="#alarmsoverview">Overview</a>
+        <a href="#alarmsdetail">Detail</a>
+        <a href="#alarmslist">List</a>
+        <a href="#thresholds">Thresholds</a>
+        <a href="#graphs">Graphs</a>
+      </div>
+      <button id="deleteplot" class="niceButton" data-role="none">Delete</button>
+      <select id="name_dropdown" data-role="none"></select>
+      <button id="addplot" class="niceButton" data-role="none">Add</button>
+      <div id="graphstatus"></div>
+      <div id="plots">
+        Plots go here!
+      </div>
+    </div>
   </body>
+
   <script src="../../script/slowloader.js"></script> 
   <script src="../../script/slowrunner.js"></script> 
+  <script src="../../script/plots.js"></script>
   <script src="/_utils/script/sha1.js"></script>
   <script src="../../vendor/couchapp/jquery.evently.js"></script>
   <script src="../../vendor/couchapp/jquery.mustache.js"></script>
