--- a/templates/slowcontrol.html
+++ b/templates/slowcontrol.html
@@ -1,28 +1,32 @@
-<DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
   <head>
     <title>Alarms Overview</title> {{!comment}}
-    <link rel="stylesheet" href="/slowcontrol/_design/slowcontrol/style/main.css" type="text/css">
+    <link rel="stylesheet" href="/slowcontrol-channeldb/_design/slowcontrol/style/main.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/_utils/script/json2.js"></script>
     <!-- script src="http://code.jquery.com/jquery-1.8.2.min.js"></script -->
 
-    <script src="../../script/jquery.js"></script>
-    <script src="../../script/jquery.mobile.js"></script>
-    <link rel="stylesheet" href="../../style/jquery.mobile.css" type="text/css">
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.js"></script>
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.mobile.js"></script>
+    <!--script src="../../script/jquery.mobile.min.js"></script-->
+    <link rel="stylesheet" href="/slowcontrol-channeldb/_design/slowcontrol/style/jquery.mobile.css" type="text/css">
+    <!--link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" /-->
+    <!--script src="http://code.jquery.com/jquery-1.9.1.min.js"></script-->
+    <!--script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script-->
 
     <script src="/_utils/script/jquery.couch.js"></script>
-    <script src="../../vendor/couchapp/jquery.couch.app.js"></script>
-    <script src="../../vendor/couchapp/jquery.couch.app.util.js"></script>
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.couch.app.js"></script>
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.couch.app.util.js"></script>
     <!-- script src="../../script/app.js"></script -->
     
-    <script src="../../script/highcharts.js" type="text/javascript"></script>
-    <script src="../../script/themes/grid.js" type="text/javascript"></script> 
-    <script src="../../script/modules/exporting.js" type="text/javascript"></script>
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/highcharts.js" type="text/javascript"></script>
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/themes/grid.js" type="text/javascript"></script> 
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/modules/exporting.js" type="text/javascript"></script>
 
-    <script src="../../script/highslide/highslide-full.min.js" type="text/javascript"></script>
-    <script src="../../script/highslide/highslide.config.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="/slowcontrol/_design/slowcontrol/style/highslide.css" />
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/highslide/highslide-full.min.js" type="text/javascript"></script>
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/highslide/highslide.config.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/slowcontrol-channeldb/_design/slowcontrol/style/highslide.css" />
   </head>
   <body>
     <div data-role="page" id="alarmsdetail">
@@ -35,10 +39,23 @@
         <a href="#thresholds">Thresholds</a>
         <a href="#graphs">Graphs</a>
       </div>
+      <div data-role="none" id="audio">
+        <button id="rackaudiobutton" class="niceButton" data-role="none" loop="true">Rack Audio Alarm On</button>
+        <button id="testaudiobutton" class="niceButton" data-role="none">Test Audio</button>
+        <button id="colorblindbutton" class="niceButton" data-role="none">Colorblind Mode Off</button>
+        <audio preload="true" id="testaudio">
+          <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/testaudio.ogg" type="audio/ogg" />
+          <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/testaudio.mp3" type="audio/mp3" />
+        </audio>
+        <audio preload="true" id="rackaudio" loop="true">
+          <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/rackaudio.ogg" type="audio/ogg" />
+          <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/rackaudio.mp3" type="audio/mp3" />
+        </audio>
+      </div>
       <div id="wheretext"></div>
       <div style="width:100%;height:175px">
         <div>
-          Racks
+          Rack Voltages
         </div>
         {{#racks}}
           <div class="{{style}}">
@@ -52,9 +69,9 @@
         {{/racks}}
       </div>
   
-      <div style="width:100%;height:230px">
+      <div style="width:100%;height:175px">
         <div>
-          Crates
+          Crate Currents
         </div>
         {{#crates}}
           <div class="{{style}}">
@@ -70,7 +87,7 @@
   
       <div style="width:100%;height:100px">
         <div>
-          Comp Coils
+          Comp Coil Status
         </div>
         {{#compcoils}}
           <div class="{{style}}">
@@ -84,15 +101,129 @@
         {{/compcoils}}
       </div>
   
+      <div style="width:100%;height:50px">
+        <div>
+          Hold-up Rope Tensions
+        </div>
+        {{#holdupropes}}
+          <div class="{{style}}">
+            <div id="holdup{{id}}" class="box inside">
+              {{id}}
+            </div>
+          </div>
+        {{/holdupropes}}
+      </div>
+      <div style="width:100%;height:50px">
+        <div>
+          Hold-down Rope Tensions
+        </div>
+        {{#holddownropes}}
+          <div class="{{style}}">
+            <div id="holddown{{id}}" class="box inside">
+              {{id}}
+            </div>
+          </div>
+        {{/holddownropes}}
+      </div>
+      <div style="width:100%;height:50px">
+        <div>
+          Equator monitors
+        </div>
+        {{#equator}}
+          <div class="{{style}}">
+            <div id="equator{{id}}" class="box inside">
+              {{id}}
+            </div>
+          </div>
+        {{/equator}}
+      </div>
+      <div style="width:100%;height:50px">
+        <div>
+          AV temp
+        </div>
+        {{#AVtemp}}
+          <div class="{{style}}">
+            <div id="AV_temp{{id}}" class="box inside">
+              {{id}}
+            </div>
+          </div>
+        {{/AVtemp}}
+      </div>
+      <div style="width:100%;height:50px">
+        <div>
+          Cavity water level
+        </div>
+        {{#cavitywaterlevel}}
+          <div class="{{style}}">
+            <div id="cavity_water_level{{id}}" class="box inside">
+              {{id}}
+            </div>
+          </div>
+        {{/cavitywaterlevel}}
+      </div>
+
       <div style="width:100%;height:150px">
         <div>
           Others
         </div>
         <div class="big">
-          <div id="otherE-Stop" class="box big" style="clear:both">E-Stop</div>
+          <div id="otherE-Stop" class="box big" style="clear:both">E-Stop/HV Disable</div>
         </div>
         <div class="big">
           <div id="otherMine" class="box big" style="clear:both">Mine Power</div>
+        </div>
+      </div>
+
+      <div style="width:100%;height:175px">
+        <div>
+          Page updates (browswer time minus latest document timestamp)
+        </div>
+        <div>
+          <div>
+            <span  class="timetable narrow"></span>
+            <span  class="timetable narrow">data</span>
+            <span  class="timetable narrow">alarms</span>
+          </div>
+          <div style="clear:both">
+            <span  class="timetable narrow">IOS 1 
+            </span>
+            <span  class="timetable narrow" id="time_data_ios1"> 
+            </span>
+            <span  class="timetable narrow" id="time_alarm_ios1"> 
+            </span>
+          </div>
+          <div style="clear:both">
+            <span  class="timetable narrow">IOS 2 
+            </span>
+            <span  class="timetable narrow" id="time_data_ios2"> 
+            </span>
+            <span  class="timetable narrow" id="time_alarm_ios2"> 
+            </span>
+          </div>
+          <div style="clear:both">
+            <span  class="timetable narrow">IOS 3 
+            </span>
+            <span  class="timetable narrow" id="time_data_ios3"> 
+            </span>
+            <span  class="timetable narrow" id="time_alarm_ios3"> 
+            </span>
+          </div>
+          <div style="clear:both">
+            <span  class="timetable narrow">IOS 4 
+            </span>
+            <span  class="timetable narrow" id="time_data_ios4"> 
+            </span>
+            <span  class="timetable narrow" id="time_alarm_ios4"> 
+            </span>
+          </div>
+          <div style="clear:both">
+            <span  class="timetable narrow">Delta V 
+            </span>
+            <span  class="timetable narrow" id="time_data_deltav"> 
+            </span>
+            <span  class="timetable narrow" id="time_alarm_deltav"> 
+            </span>
+          </div>
         </div>
       </div>
     </div>
@@ -232,15 +363,14 @@
       <button id="addplot" class="niceButton" data-role="none">Add</button>
       <div id="graphstatus"></div>
       <div id="plots">
-        Plots go here!
       </div>
     </div>
-  </body>
 
-  <script src="../../script/slowloader.js"></script> 
-  <script src="../../script/slowrunner.js"></script> 
-  <script src="../../script/plots.js"></script>
-  <script src="/_utils/script/sha1.js"></script>
-  <script src="../../vendor/couchapp/jquery.evently.js"></script>
-  <script src="../../vendor/couchapp/jquery.mustache.js"></script>
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/slowloader.js"></script> 
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/slowrunner.js"></script> 
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/plots.js"></script>
+    <script src="/_utils/script/sha1.js"></script>
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.evently.js"></script>
+    <script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.mustache.js"></script>
+  </body>
 </html>
