--- a/templates/slowcontrol.html
+++ b/templates/slowcontrol.html
@@ -1,20 +1,28 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Alarms Overview</title> {{!comment}}
+    <title>Slow Control Alarms</title> {{!comment}}
     <link rel="stylesheet" href="/slowcontrol-channeldb/_design/slowcontrol/style/main.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/_utils/script/json2.js"></script>
-    <!-- script src="http://code.jquery.com/jquery-1.8.2.min.js"></script -->
 
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.js"></script>
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.mobile.js"></script>
-    <!--script src="../../script/jquery.mobile.min.js"></script-->
-    <link rel="stylesheet" href="/slowcontrol-channeldb/_design/slowcontrol/style/jquery.mobile.css" type="text/css">
-    <!--link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" /-->
-    <!--script src="http://code.jquery.com/jquery-1.9.1.min.js"></script-->
+<!--The newest versions-->
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+
+<script src="http://code.jquery.com/jquery-1.9.0.js"></script>
+<script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
+
+<!--The (old) versions in use-->
+<!--    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.js"></script>
+    <!--script src="http://code.jquery.com/jquery-1.8.2.min.js"></script-->
+<!--    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.mobile.js"></script>
     <!--script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script-->
+<!--    <link rel="stylesheet" href="/slowcontrol-channeldb/_design/slowcontrol/style/jquery.mobile.css" type="text/css">
+    <!--link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" /-->
 
+<!--jquery couch stuff-->
     <script src="/_utils/script/jquery.couch.js"></script>
     <script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.couch.app.js"></script>
     <script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.couch.app.util.js"></script>
@@ -31,17 +39,29 @@
   <body>
     <div data-role="page" id="alarmsdetail">
       {{!<div id="account"></div>}}
-      <h1>Alarms Detail</h1>
-      <div id="navigation">
-        <a href="#alarmsoverview">Overview</a>
-        <a href="#alarmsdetail">Detail</a>
-        <a href="#alarmslist">List</a>
-        <a href="#thresholds">Thresholds</a>
-        <a href="#graphs">Graphs</a>
+      <!--Detail-->
+      <div data-role="header" class="ui-state-persist" data-position="fixed">
+	<h1>Slow Control Alarms</h1>
+	<a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
+	<!--<a id="rackaudiobutton" loop="true" data-icon="alert">Rack Audio Alarm On</a>
+        <audio preload="true" id="rackaudio" loop="true">
+          <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/rackaudio.ogg" type="audio/ogg" />
+          <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/rackaudio.mp3" type="audio/mp3" />
+        </audio>-->
+	<div data-role="navbar">
+          <ul>
+            <li><a href="#alarmsoverview" data-icon="grid">Overview</a>
+	    <li><a href="#alarmsdetail" class="ui-btn-active ui-state-persist" data-icon="bullets">Detail</a>
+	    <li><a href="#alarmslist" data-icon="alert">Alarm List</a>
+            <li><a href="#thresholds" data-icon="edit">Thresholds</a>
+            <li><a href="#graphs" data-icon="bars">Graphs</a>
+          </ul>
+	</div>
       </div>
+      <p></p>
       <div data-role="none" id="audio">
         <button id="rackaudiobutton" class="niceButton" data-role="none" loop="true">Rack Audio Alarm On</button>
-        <button id="testaudiobutton" class="niceButton" data-role="none">Test Audio</button>
+	<button id="testaudiobutton" class="niceButton" data-role="none">Test Audio</button>
         <button id="colorblindbutton" class="niceButton" data-role="none">Colorblind Mode Off</button>
         <audio preload="true" id="testaudio">
           <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/testaudio.ogg" type="audio/ogg" />
@@ -58,59 +78,59 @@
           Rack Voltages
         </div>
         {{#racks}}
-          <div class="{{style}}">
-            {{id}}
-            {{#channels}}
-              <div id="rack{{id}}channel{{channel}}" class="box inside">
-                {{channel}}
-              </div>
-            {{/channels}}
+        <div class="{{style}}">
+          {{id}}
+          {{#channels}}
+          <div id="rack{{id}}channel{{channel}}" class="box inside">
+            {{channel}}
           </div>
+          {{/channels}}
+        </div>
         {{/racks}}
       </div>
-  
+      
       <div style="width:100%;height:175px">
         <div>
           Crate Currents
         </div>
         {{#crates}}
-          <div class="{{style}}">
-            {{id}}
-            {{#channels}}
-              <div id="crate{{id}}channel{{channel}}" class="box inside">
-                {{channel}}
-              </div>
-            {{/channels}}
+        <div class="{{style}}">
+          {{id}}
+          {{#channels}}
+          <div id="crate{{id}}channel{{channel}}" class="box inside">
+            {{channel}}
           </div>
+          {{/channels}}
+        </div>
         {{/crates}}
       </div>
-  
+      
       <div style="width:100%;height:100px">
         <div>
           Comp Coil Status
         </div>
         {{#compcoils}}
-          <div class="{{style}}">
-            {{id}}
-            {{#channels}}
-              <div id="coil{{id}}channel{{channelshort}}" class="box inside">
-                {{channel}}
-              </div>
-            {{/channels}}
+        <div class="{{style}}">
+          {{id}}
+          {{#channels}}
+          <div id="coil{{id}}channel{{channelshort}}" class="box inside">
+            {{channel}}
           </div>
+          {{/channels}}
+        </div>
         {{/compcoils}}
       </div>
-  
+      
       <div style="width:100%;height:50px">
         <div>
           Hold-up Rope Tensions
         </div>
         {{#holdupropes}}
-          <div class="{{style}}">
-            <div id="holdup{{id}}" class="box inside">
-              {{id}}
-            </div>
+        <div class="{{style}}">
+          <div id="holdup{{id}}" class="box inside">
+            {{id}}
           </div>
+        </div>
         {{/holdupropes}}
       </div>
       <div style="width:100%;height:50px">
@@ -118,11 +138,11 @@
           Hold-down Rope Tensions
         </div>
         {{#holddownropes}}
-          <div class="{{style}}">
-            <div id="holddown{{id}}" class="box inside">
-              {{id}}
-            </div>
+        <div class="{{style}}">
+          <div id="holddown{{id}}" class="box inside">
+            {{id}}
           </div>
+        </div>
         {{/holddownropes}}
       </div>
       <div style="width:100%;height:50px">
@@ -130,11 +150,11 @@
           Equator monitors
         </div>
         {{#equator}}
-          <div class="{{style}}">
-            <div id="equator{{id}}" class="box inside">
-              {{id}}
-            </div>
+        <div class="{{style}}">
+          <div id="equator{{id}}" class="box inside">
+            {{id}}
           </div>
+        </div>
         {{/equator}}
       </div>
       <div style="width:100%;height:50px">
@@ -142,11 +162,11 @@
           AV temp
         </div>
         {{#AVtemp}}
-          <div class="{{style}}">
-            <div id="AV_temp{{id}}" class="box inside">
-              {{id}}
-            </div>
+        <div class="{{style}}">
+          <div id="AV_temp{{id}}" class="box inside">
+            {{id}}
           </div>
+        </div>
         {{/AVtemp}}
       </div>
       <div style="width:100%;height:50px">
@@ -154,14 +174,14 @@
           Cavity water level
         </div>
         {{#cavitywaterlevel}}
-          <div class="{{style}}">
-            <div id="cavity_water_level{{id}}" class="box inside">
-              {{id}}
-            </div>
+        <div class="{{style}}">
+          <div id="cavity_water_level{{id}}" class="box inside">
+            {{id}}
           </div>
+        </div>
         {{/cavitywaterlevel}}
       </div>
-
+      
       <div style="width:100%;height:150px">
         <div>
           Others
@@ -173,7 +193,7 @@
           <div id="otherMine" class="box big" style="clear:both">Mine Power</div>
         </div>
       </div>
-
+      
       <div style="width:100%;height:175px">
         <div>
           Page updates (browswer time minus latest document timestamp)
@@ -230,16 +250,34 @@
 
     <div data-role="page" id="alarmsoverview">
       {{!<div id="account"></div>}}
-      <h1>Alarms Overview</h1>
-      <div id="navigation">
-        <a href="#alarmsoverview">Overview</a>
-        <a href="#alarmsdetail">Detail</a>
-        <a href="#alarmslist">List</a>
-        <a href="#thresholds">Thresholds</a>
-        <a href="#graphs">Graphs</a>
+      <!--Overview-->
+      <div data-role="header" class="ui-state-persist" data-position="fixed">
+	<h1>Slow Control Alarms</h1>
+	<a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
+	<div data-role="navbar">
+          <ul>
+            <li><a href="#alarmsoverview" class="ui-btn-active ui-state-persist" data-icon="grid">Overview</a>
+	    <li><a href="#alarmsdetail"  data-icon="bullets">Detail</a>
+	    <li><a href="#alarmslist" data-icon="alert">Alarm List</a>
+            <li><a href="#thresholds" data-icon="edit">Thresholds</a>
+            <li><a href="#graphs" data-icon="bars">Graphs</a>
+          </ul>
+	</div>
       </div>
-      <div id="wheretext"></div>
-
+      <p></p>
+      <div data-role="none" id="audio">
+        <button id="rackaudiobutton" class="niceButton" data-role="none" loop="true">Rack Audio Alarm On</button>
+	<button id="testaudiobutton" class="niceButton" data-role="none">Test Audio</button>
+        <button id="colorblindbutton" class="niceButton" data-role="none">Colorblind Mode Off</button>
+        <audio preload="true" id="testaudio">
+          <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/testaudio.ogg" type="audio/ogg" />
+          <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/testaudio.mp3" type="audio/mp3" />
+        </audio>
+        <audio preload="true" id="rackaudio" loop="true">
+          <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/rackaudio.ogg" type="audio/ogg" />
+          <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/rackaudio.mp3" type="audio/mp3" />
+        </audio>
+      </div>
       <div id="racks" style="width:100%;float:left;clear:both">
         <div class="racks" id="rack1">Rack 1 Voltage
           <div class="crates" id="crate0">Crate 0 Current</div>
@@ -292,29 +330,43 @@
 
     <div data-role="page" id="alarmslist">
       {{!<div id="account"></div>}}
-      <h1>Alarms List</h1>
-      <div id="navigation">
-        <a href="#alarmsoverview">Overview</a>
-        <a href="#alarmsdetail">Detail</a>
-        <a href="#alarmslist">List</a>
-        <a href="#thresholds">Thresholds</a>
-        <a href="#graphs">Graphs</a>
+      <!--Alarm List-->
+      <div data-role="header" class="ui-state-persist" data-position="fixed">
+	<h1>Slow Control Alarms</h1>
+	<a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
+	<div data-role="navbar">
+          <ul>
+            <li><a href="#alarmsoverview" data-icon="grid">Overview</a>
+	    <li><a href="#alarmsdetail"  data-icon="bullets">Detail</a>
+	    <li><a href="#alarmslist" class="ui-btn-active ui-state-persist" data-icon="alert">Alarm List</a>
+            <li><a href="#thresholds" data-icon="edit">Thresholds</a>
+            <li><a href="#graphs" data-icon="bars">Graphs</a>
+          </ul>
+	</div>
       </div>
+      <p></p>
       <div id="wheretext"></div>
       Alarm list 
       <div id="alarmlist" style="width:100%;float:left;clear:both"></div>
     </div>
 
     <div data-role="page" id="thresholds">
-      <div id="account"></div>
-      <h1>Slow Control Alarm Thresholds</h1>
-      <div id="navigation">
-        <a href="#alarmsoverview">Overview</a>
-        <a href="#alarmsdetail">Detail</a>
-        <a href="#alarmslist">List</a>
-        <a href="#thresholds">Thresholds</a>
-        <a href="#graphs">Graphs</a>
+      {{!<div id="account"></div>}}
+      <!--Thresholds-->
+      <div data-role="header" class="ui-state-persist" data-position="fixed">
+	<h1>Slow Control Alarms</h1>
+	<a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
+	<div data-role="navbar">
+          <ul>
+            <li><a href="#alarmsoverview" data-icon="grid">Overview</a>
+	    <li><a href="#alarmsdetail" data-icon="bullets">Detail</a>
+	    <li><a href="#alarmslist" data-icon="alert">Alarm List</a>
+            <li><a href="#thresholds" class="ui-btn-active ui-state-persist" data-icon="edit">Thresholds</a>
+            <li><a href="#graphs" data-icon="bars">Graphs</a>
+          </ul>
+	</div>
       </div>
+      <p></p>
       <div id="statustext"></div>
       <div id="statustext1"></div>
       <div class="wideColumn">
@@ -350,14 +402,21 @@
     </div>
 
     <div data-role="page" id="graphs">
-      <h1>Slow Control Graphs</h1>
-      <div id="navigation">
-        <a href="#alarmsoverview">Overview</a>
-        <a href="#alarmsdetail">Detail</a>
-        <a href="#alarmslist">List</a>
-        <a href="#thresholds">Thresholds</a>
-        <a href="#graphs">Graphs</a>
+      <!--Graphs-->
+      <div data-role="header" class="ui-state-persist" data-position="fixed">
+	<h1>Slow Control Alarms</h1>
+	<a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
+	<div data-role="navbar">
+          <ul>
+            <li><a href="#alarmsoverview" data-icon="grid">Overview</a>
+	    <li><a href="#alarmsdetail" data-icon="bullets">Detail</a>
+	    <li><a href="#alarmslist" data-icon="alert">Alarm List</a>
+            <li><a href="#thresholds" data-icon="edit">Thresholds</a>
+            <li><a href="#graphs" class="ui-btn-active ui-state-persist" data-icon="bars">Graphs</a>
+          </ul>
+	</div>
       </div>
+      <p></p>
       <button id="deleteplot" class="niceButton" data-role="none">Delete</button>
       <select id="name_dropdown" data-role="none"></select>
       <button id="addplot" class="niceButton" data-role="none">Add</button>
