--- a/templates/slowcontrol.html
+++ b/templates/slowcontrol.html
@@ -1,71 +1,69 @@
 <!DOCTYPE HTML>
 <html>
-   <head>
-   <title>Slow Control Alarms</title> {{!comment}}
+<head>
+<title>Slow Control Alarms</title> {{!comment}}
 <link rel="stylesheet" href="/slowcontrol-channeldb/_design/slowcontrol/style/main.css" type="text/css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/_utils/script/json2.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="/_utils/script/json2.js"></script>
 
-<!--The newest versions-->
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+<!--jQuery scripts -->
+<!--<script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.js"></script>-->
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 
-<script src="http://code.jquery.com/jquery-1.9.0.js"></script>
-<script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
+<!--<script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.mobile.js"></script>-->
+<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
-<!--The (old) versions in use-->
-<!--    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.js"></script>
-    <!--script src="http://code.jquery.com/jquery-1.8.2.min.js"></script-->
-<!--    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/jquery.mobile.js"></script>
-    <!--script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script-->
-<!--    <link rel="stylesheet" href="/slowcontrol-channeldb/_design/slowcontrol/style/jquery.mobile.css" type="text/css">
-    <!--link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" /-->
+<!--<link rel="stylesheet" href="/slowcontrol-channeldb/_design/slowcontrol/style/jquery.mobile.css" type="text/css">-->
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 
 <!--jquery couch stuff-->
-    <script src="/_utils/script/jquery.couch.js"></script>
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.couch.app.js"></script>
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.couch.app.util.js"></script>
+<!--The following is not compatible with jquery since couchdb is -->
+<!--running on an old version. Thus, a good (newer) version of jquery.couch.js -->
+<!--has been placed in the couchapp directory-->
+<!--<script src="/_utils/script/jquery.couch.js"></script>-->
+<script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.couch.js"></script>
+<script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.couch.app.js"></script>
+<script src="/slowcontrol-channeldb/_design/slowcontrol/vendor/couchapp/jquery.couch.app.util.js"></script>
     <!-- script src="../../script/app.js"></script -->
     
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/highcharts.js" type="text/javascript"></script>
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/themes/grid.js" type="text/javascript"></script> 
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/modules/exporting.js" type="text/javascript"></script>
+<script src="/slowcontrol-channeldb/_design/slowcontrol/script/highcharts.js" type="text/javascript"></script>
+<script src="/slowcontrol-channeldb/_design/slowcontrol/script/themes/grid.js" type="text/javascript"></script> 
+<script src="/slowcontrol-channeldb/_design/slowcontrol/script/modules/exporting.js" type="text/javascript"></script>
 
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/highslide/highslide-full.min.js" type="text/javascript"></script>
-    <script src="/slowcontrol-channeldb/_design/slowcontrol/script/highslide/highslide.config.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="/slowcontrol-channeldb/_design/slowcontrol/style/highslide.css" />
+<script src="/slowcontrol-channeldb/_design/slowcontrol/script/highslide/highslide-full.min.js" type="text/javascript"></script>
+<script src="/slowcontrol-channeldb/_design/slowcontrol/script/highslide/highslide.config.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="/slowcontrol-channeldb/_design/slowcontrol/style/highslide.css" />
 </head>
 <body>
 <div data-role="page" id="alarmsdetail">
   {{!<div id="account"></div>}}
-      <!--Detail-->
-      <div data-role="header" class="ui-state-persist" data-position="fixed">
-	<h1>Slow Control Alarms</h1>
-	<a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
-        <div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-right">
-	  <a id="rackaudiobutton" loop="true" class="ui-btn ui-btn-icon-right ui-icon-comment">Rack Audio Alarm On</a>
-	  <a id="testaudiobutton" class="ui-btn ui-btn-icon-right ui-icon-gear">Test Audio</a>
-	  <a id="colorblindbutton" class="ui-btn ui-btn-icon-right ui-icon-eye">Colorblind Mode Off</a>
-	  <audio preload="true" id="testaudio">
-	    <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/testaudio.ogg" type="audio/ogg" />
-            <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/testaudio.mp3" type="audio/mp3" />
-          </audio>
-          <audio preload="true" id="rackaudio" loop="true">
-            <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/rackaudio.ogg" type="audio/ogg" />
-            <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/rackaudio.mp3" type="audio/mp3" />
-          </audio>
-	</div>
-	<div data-role="navbar">
-          <ul>
-            <li><a href="#alarmsoverview" data-icon="grid">Overview</a>
-	    <li><a href="#alarmsdetail" class="ui-btn-active ui-state-persist" data-icon="bullets">Detail</a>
-	    <li><a href="#alarmslist" data-icon="alert">Alarm List</a>
-            <li><a href="#thresholds" data-icon="edit">Thresholds</a>
-            <li><a href="#graphs" data-icon="bars">Graphs</a>
-          </ul>
-	</div>
-      </div>
+  <!--Detail-->
+  <div data-role="header" class="ui-state-persist" data-position="fixed">
+    <h1>Slow Control Alarms</h1>
+    <a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
+  <div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-right">
+    <a id="rackaudiobutton" loop="true" class="ui-btn ui-btn-icon-right ui-icon-comment">Rack Audio Alarm On</a>
+    <a id="testaudiobutton" class="ui-btn ui-btn-icon-right ui-icon-gear">Test Audio</a>
+    <a id="colorblindbutton" class="ui-btn ui-btn-icon-right ui-icon-eye">Colorblind Mode Off</a>
+    <audio preload="true" id="testaudio">
+    <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/testaudio.ogg" type="audio/ogg" />
+    <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/testaudio.mp3" type="audio/mp3" />
+    </audio>
+    <audio preload="true" id="rackaudio" loop="true">
+    <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/rackaudio.ogg" type="audio/ogg" />
+    <source src="/slowcontrol-channeldb/_design/slowcontrol/audio/rackaudio.mp3" type="audio/mp3" />
+    </audio>
+  </div><!-- /controlgroup -->
+  <div data-role="navbar">
+    <ul>
+      <li><a href="#alarmsoverview" data-icon="grid">Overview</a>
+      <li><a href="#alarmsdetail" class="ui-btn-active ui-state-persist" data-icon="bullets">Detail</a>
+      <li><a href="#alarmslist" data-icon="alert">Alarm List</a>
+      <li><a href="#thresholds" data-icon="edit">Thresholds</a>
+      <li><a href="#graphs" data-icon="bars">Graphs</a>
+    </ul>
+  </div><!-- /navbar -->
+  </div><!-- /header -->
       <p></p>
       <div id="wheretext"></div>
       <div style="width:100%;height:175px">
@@ -140,6 +138,7 @@
         </div>
         {{/holddownropes}}
       </div>
+
       <div style="width:100%;height:50px">
         <div>
           Equator monitors
@@ -152,32 +151,32 @@
         </div>
         {{/equator}}
       </div>
+
       <div style="width:100%;height:50px">
-        <div>
-          AV temp
-        </div>
+        <div>Cavity water</div>
         {{#AVtemp}}
         <div class="{{style}}">
-          <div id="AV_temp{{id}}" class="box inside">
-            {{id}}
-          </div>
+          <div id="cavity_water_temp1" class="box inside" style="clear:both">Temp.</div>
+	</div>
+	<div class="{{style}}">
+	  <div id="cavity_water_level1" class="box inside" style="clear:both">Level</div>
         </div>
         {{/AVtemp}}
       </div>
-      <div style="width:100%;height:50px">
+
+      <div style="width:100%;height:100px">
         <div>
-          Cavity water level
+          Deck
         </div>
-        {{#cavitywaterlevel}}
-        <div class="{{style}}">
-          <div id="cavity_water_level{{id}}" class="box inside">
-            {{id}}
-          </div>
+        <div class="big">
+          <div id="deck_temp1" class="box inside" style="clear:both">Temp.</div>
         </div>
-        {{/cavitywaterlevel}}
+        <div class="big">
+          <div id="deck_humidity1" class="box inside" style="clear:both">Humidity</div>
+        </div>
       </div>
       
-      <div style="width:100%;height:150px">
+      <div style="width:100%;height:100px">
         <div>
           Others
         </div>
@@ -186,6 +185,9 @@
         </div>
         <div class="big">
           <div id="otherMine" class="box big" style="clear:both">Mine Power</div>
+        </div>
+	<div class="big">
+          <div id="otherMTCD" class="box big" style="clear:both">MTCD -2V</div>
         </div>
       </div>
       
@@ -238,11 +240,11 @@
             </span>
             <span  class="timetable narrow" id="time_alarm_deltav"> 
             </span>
-          </div>
-        </div>
-      </div>
+	  </div>
+	  </div>
+	  </div>
     </div>
-
+ 
     <div data-role="page" id="alarmsoverview">
       {{!<div id="account"></div>}}
       <!--Overview-->
@@ -336,10 +338,11 @@
           </ul>
 	</div>
       </div>
-      <p></p>
+<div role="main" class="ui-content">
       <div id="wheretext"></div>
-      Alarm list 
+      <h3>Alarm List</h3> 
       <div id="alarmlist" style="width:100%;float:left;clear:both"></div>
+      </div>
     </div>
 
     <div data-role="page" id="thresholds">
@@ -360,20 +363,26 @@
 	  <li><a href="#thresholds" class="ui-btn-active ui-state-persist" data-icon="edit">Thresholds</a>
 	  <li><a href="#graphs" data-icon="bars">Graphs</a>
 	</ul>
-	
-      <div class="wideColumn" style="clear:none">
+      <div class="middleColumn" style="clear:none">
 	<button id="showPresentThresholds" class="niceButton">Toggle Present Thresholds</button>
 	<button id="showApprovedThresholds" class="niceButton">Toggle Approved Thresholds</button>
       </div>
-      <div class="wideColumn" style="clear:none">
+      <div class="middleColumn" style="clear:none">
 	<button id="fillPresentThresholds" class="niceButton">Fill Present Thresholds</button>
 	<button id="fillApprovedThresholds" class="niceButton">Fill Approved Thresholds</button>
       </div>
-      <div class="wideColumn" style="clear:none" data-role="none">
+      <div class="middleColumn" style="clear:none" data-role="none">
 	<button id="refreshPresent" class="niceButton">Refresh Present Values</button>
+	<button id="showAlarms" class="niceButton">Show Alarms</button>
       </div>
-      <div class="wideColumn" style="clear:none" data-role="none">
-	<button id="saveThresholds" class="niceButton">Save Thresholds</button>
+      <div>
+	<p>Before saving thresholds, please enter your name:</p>
+	<div class="middleColumn" style="clear:none" data-role="none">
+	  <input type="text" name="name-text" id="name-text" value="" required></input>
+	</div>
+	<div class="middleColumn" style="clear:none" data-role="none">
+	  <input type="submit" id="saveThresholds" value="Save Thresholds">
+	</div>
       </div>
       <!-- <button id="format" class="niceButton" data-role="none">Format</button>-->
       <div id="approval" style="display:none"> Approve: <input type="checkbox" label="Approve:" id="approved" data-role="none" />
@@ -381,6 +390,7 @@
       </div>
       </div>
       <p></p>
+
       <div id="statustext"></div>
       <div id="statustext1"></div>
       <div class="header">
