New threshold Interface
Removed Alarms page and updated interface for Thresholds page

--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -37,13 +37,13 @@ float:left;
 }
 .big{
 width:100px;
-height:61px;
+height:51px;
 float:left;
 text-align:center;
 }
 .inside{
 width:100%;
-height:25px;
+height:20px;
 float:left;
 text-align:center;
 clear:both;
@@ -84,12 +84,13 @@ border:1px solid #000;
 text-shadow:none; 
 float:left;
 }
-
+/*
 .header{
 width:100%;
 float:none;
 clear:both;
 }
+*/
 .channel{
 width:100%;
 float:none;
@@ -103,9 +104,10 @@ padding:2px;
 }
 .wideColumn {
 width:16em;
-float:left;
+/*float:left;
 clear:both;
-padding:2px;
+vertical-align: middle;
+padding:2px;*/
 }
 .wide {
 width:15em;
@@ -116,8 +118,8 @@ width:20em;
 
 .narrowColumn {
 width:6em;
-float:left;
-padding:2px;
+/*float:left;
+padding:2px;*/
 }
 .narrow{
 width:5em;
@@ -125,16 +127,16 @@ width:5em;
 .approved{
 display:none;
 color:green;
-height:24px;
+/*height:24px;*/
 }
 .present{
 display:none;
 color:blue;
-height:24px;
+/*height:24px;*/
 }
 .set{
 display:block;
-height:16px;
+/*height:16px;*/
 }
 
 .red{
@@ -176,13 +178,13 @@ color:red;
   padding:8px;
   margin:4px 0;
 }
-
+/*
 form {
   padding:4px;
   margin:6px;
   background-color:#ddd;  
 }
-
+*/
 div.avatar {
   padding:2px;
   padding-bottom:0;
