--- a/templates/slowcontrol.html
+++ b/templates/slowcontrol.html
@@ -37,7 +37,6 @@
 <body>
 <div data-role="page" id="alarmsdetail">
   {{!<div id="account"></div>}}
-  <!--Detail-->
   <div data-role="header" class="ui-state-persist" data-position="fixed">
     <h1>Slow Control Alarms</h1>
     <a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
@@ -56,17 +55,15 @@
   </div><!-- /controlgroup -->
   <div data-role="navbar">
     <ul>
-      <!--<li><a href="#alarmsoverview" data-icon="grid">Overview</a>-->
-      <li><a href="#alarmsdetail" class="ui-btn-active ui-state-persist" data-icon="bullets">Detail</a>
-      <li><a href="#alarmslist" data-icon="alert">Alarm List</a>
-      <li><a href="#thresholds" data-icon="edit">Thresholds</a>
+      <li><a href="#alarmsdetail" class="ui-btn-active ui-state-persist" data-icon="grid">Overview</a>
+      <li><a href="#thresholds" data-icon="edit">Channel Thresholds</a>
       <li><a href="#graphs" data-icon="bars">Graphs</a>
     </ul>
   </div><!-- /navbar -->
   </div><!-- /header -->
       <p></p>
       <div id="wheretext"></div>
-      <div style="width:100%;height:175px">
+      <div style="width:100%;height:160px">
         <div>
           Rack Voltages
         </div>
@@ -82,9 +79,9 @@
         {{/racks}}
       </div>
       
-      <div style="width:100%;height:175px">
+      <div style="width:100%;height:90px">
         <div>
-          Crate Currents
+          Crate XL3's
         </div>
         {{#crates}}
         <div class="{{style}}">
@@ -97,8 +94,35 @@
         </div>
         {{/crates}}
       </div>
+
+      <div style="width:100%;height:90px">
+        <div>
+          Others
+        </div>
+	<div class="big">
+          <div id="otherMTCD" class="box big" style="clear:both">MTCD -2V</div>
+        </div>
+	<div class="big">
+          <div id="otherE-Stop" class="box big" style="clear:both">E-Stop/HV Disable</div>
+        </div>
+        <div class="big">
+          <div id="otherMine" class="box big" style="clear:both">Mine Power</div>
+        </div>
+	<div class="big">
+          <div id="cavity_water_temp1" class="box big" style="clear:both">Cavity Water Temp</div>
+        </div>
+	<div class="big">
+          <div id="cavity_water_level1" class="box big" style="clear:both">Cavity Water Level</div>
+        </div>
+	<div class="big">
+          <div id="deck_temp1" class="box big" style="clear:both">Deck Temperature</div>
+        </div>
+	<div class="big">
+          <div id="deck_humidity1" class="box big" style="clear:both">Deck Humidity</div>
+        </div>
+      </div>
       
-      <div style="width:100%;height:100px">
+      <div style="width:100%;height:90px">
         <div>
           Comp Coil Status
         </div>
@@ -150,45 +174,6 @@
           </div>
         </div>
         {{/equator}}
-      </div>
-
-      <div style="width:100%;height:50px">
-        <div>Cavity water</div>
-        {{#AVtemp}}
-        <div class="{{style}}">
-          <div id="cavity_water_temp1" class="box inside" style="clear:both">Temp.</div>
-	</div>
-	<div class="{{style}}">
-	  <div id="cavity_water_level1" class="box inside" style="clear:both">Level</div>
-        </div>
-        {{/AVtemp}}
-      </div>
-
-      <div style="width:100%;height:100px">
-        <div>
-          Deck
-        </div>
-        <div class="big">
-          <div id="deck_temp1" class="box inside" style="clear:both">Temp.</div>
-        </div>
-        <div class="big">
-          <div id="deck_humidity1" class="box inside" style="clear:both">Humidity</div>
-        </div>
-      </div>
-      
-      <div style="width:100%;height:100px">
-        <div>
-          Others
-        </div>
-        <div class="big">
-          <div id="otherE-Stop" class="box big" style="clear:both">E-Stop/HV Disable</div>
-        </div>
-        <div class="big">
-          <div id="otherMine" class="box big" style="clear:both">Mine Power</div>
-        </div>
-	<div class="big">
-          <div id="otherMTCD" class="box big" style="clear:both">MTCD -2V</div>
-        </div>
       </div>
       
       <div style="width:100%;height:175px">
@@ -244,110 +229,10 @@
 	  </div>
 	  </div>
     </div>
- 
-<!--    <div data-role="page" id="alarmsoverview">-->
-<!--      {{!<div id="account"></div>}}-->
-<!--      <!--Overview-->-->
-<!--      <div data-role="header" class="ui-state-persist" data-position="fixed">-->
-<!--	<h1>Slow Control Alarms</h1>-->
-<!--	<a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>-->
-<!--      <div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-right">-->
-<!--	<a class="rackaudiobutton ui-btn ui-btn-icon-right ui-icon-comment">Rack Audio Alarm On</a>-->
-<!--	<a class="testaudiobutton ui-btn ui-btn-icon-right ui-icon-gear">Test Audio</a>-->
-<!--      </div>-->
-<!--	<div data-role="navbar">-->
-<!--          <ul>-->
-<!--            <li><a href="#alarmsoverview" class="ui-btn-active ui-state-persist" data-icon="grid">Overview</a>-->
-<!--	    <li><a href="#alarmsdetail"  data-icon="bullets">Detail</a>-->
-<!--	    <li><a href="#alarmslist" data-icon="alert">Alarm List</a>-->
-<!--            <li><a href="#thresholds" data-icon="edit">Thresholds</a>-->
-<!--            <li><a href="#graphs" data-icon="bars">Graphs</a>-->
-<!--          </ul>-->
-<!--	</div>-->
-<!--      </div>-->
-<!--      <!--Testing Zone-->-->
-<!--      <!--<div class="racks" id="rack1">Rack 1 Test</div>-->-->
-<!--      <p></p>-->
-<!--      <div id="racks" style="width:100%;float:left;clear:both">-->
-<!--        <div class="racks" id="rack1">Rack 1 Voltage-->
-<!--          <div class="crates" id="crate0">Crate 0 Current</div>-->
-<!--          <div class="crates" id="crate1">Crate 1 Current</div>-->
-<!--        </div>-->
-<!--        <div class="racks" id="rack2">Rack 2 Voltage-->
-<!--          <div class="crates" id="crate2">Crate 2 Current</div>-->
-<!--          <div class="crates" id="crate3">Crate 3 Current</div>-->
-<!--        </div>-->
-<!--        <div class="racks" id="rack3">Rack 3 Voltage-->
-<!--          <div class="crates" id="crate4">Crate 4 Current</div>-->
-<!--        </div>-->
-<!--        <div class="racks" id="rack4">Rack 4 Voltage-->
-<!--          <div class="crates" id="crate5">Crate 5 Current</div>-->
-<!--          <div class="crates" id="crate6">Crate 6 Current</div>-->
-<!--        </div>-->
-<!--        <div class="racks" id="rack5">Rack 5 Voltage-->
-<!--          <div class="crates" id="crate7">Crate 7 Current</div>-->
-<!--          <div class="crates" id="crate8">Crate 8 Current</div>-->
-<!--        </div>-->
-<!--        <div class="racks" id="rack6">Rack 6 Voltage-->
-<!--          <div class="crates" id="crate9">Crate 9 Current</div>-->
-<!--          <div class="crates" id="crate10">Crate 10 Current</div>-->
-<!--        </div>-->
-<!--        <div class="racks" id="rack7">Rack 7 Voltage-->
-<!--          <div class="crates" id="crate11">Crate 11 Current</div>-->
-<!--        </div>-->
-<!--        <div class="racks" id="rack8">Rack 8 Voltage-->
-<!--          <div class="crates" id="crate12">Crate 12 Current</div>-->
-<!--          <div class="crates" id="crate13">Crate 13 Current</div>-->
-<!--        </div>-->
-<!--        <div class="racks" id="rack9">Rack 9 Voltage-->
-<!--          <div class="crates" id="crate14">Crate 14 Current</div>-->
-<!--          <div class="crates" id="crate15">Crate 15 Current</div>-->
-<!--        </div>-->
-<!--        <div class="racks" id="rack10">Rack 10 Voltage-->
-<!--          <div class="crates" id="crate16">Crate 16 Current</div>-->
-<!--        </div>-->
-<!--        <div class="racks" id="rack11">Rack 11 Voltage-->
-<!--          <div class="crates" id="crate17">Crate 17 Current</div>-->
-<!--          <div class="crates" id="crate18">Crate 18 Current</div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div id="moreracks" style="width:100%;float:left;clear:both">-->
-<!--        <div class="racks" id="timing">Timing Rack Voltage</div>-->
-<!--        <div class="racks" id="xl3s">XL3s</div>-->
-<!--        <div class="racks" id="coils">Comp Coils</div>-->
-<!--      </div>-->
-<!--    </div>-->
 
-    <div data-role="page" id="alarmslist">
-      {{!<div id="account"></div>}}
-      <!--Alarm List-->
-      <div data-role="header" class="ui-state-persist" data-position="fixed">
-	<h1>Slow Control Alarms</h1>
-	<a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
-      <div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-right">
-	<a class="rackaudiobutton ui-btn ui-btn-icon-right ui-icon-comment">Rack Audio Alarm On</a>
-	<a class="testaudiobutton ui-btn ui-btn-icon-right ui-icon-gear">Test Audio</a>
-      </div>
-      <div data-role="navbar">
-          <ul>
-            <!--<li><a href="#alarmsoverview" data-icon="grid">Overview</a>-->
-	    <li><a href="#alarmsdetail"  data-icon="bullets">Detail</a>
-	    <li><a href="#alarmslist" class="ui-btn-active ui-state-persist" data-icon="alert">Alarm List</a>
-            <li><a href="#thresholds" data-icon="edit">Thresholds</a>
-            <li><a href="#graphs" data-icon="bars">Graphs</a>
-          </ul>
-	</div>
-      </div>
-<div role="main" class="ui-content">
-      <div id="wheretext"></div>
-      <h3>Alarm List</h3> 
-      <div id="alarmlist" style="width:100%;float:left;clear:both"></div>
-      </div>
-    </div>
 
     <div data-role="page" id="thresholds">
       {{!<div id="account"></div>}}
-      <!--Thresholds-->
       <div data-role="header" class="ui-state-persist" data-position="fixed">
 	<h1>Slow Control Alarms</h1>
 	<a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
@@ -357,58 +242,91 @@
       </div>
       <div data-role="navbar">
 	<ul>
-	  <li><a href="#alarmsoverview" data-icon="grid">Overview</a>
-	  <li><a href="#alarmsdetail" data-icon="bullets">Detail</a>
-	  <li><a href="#alarmslist" data-icon="alert">Alarm List</a>
-	  <li><a href="#thresholds" class="ui-btn-active ui-state-persist" data-icon="edit">Thresholds</a>
+	  <li><a href="#alarmsdetail" data-icon="grid">Overview</a>
+	  <li><a href="#thresholds" class="ui-btn-active ui-state-persist" data-icon="edit">Channel Thresholds</a>
 	  <li><a href="#graphs" data-icon="bars">Graphs</a>
 	</ul>
-      <div class="middleColumn" style="clear:none">
-	<button id="showPresentThresholds" class="niceButton">Toggle Present Thresholds</button>
-	<button id="showApprovedThresholds" class="niceButton">Toggle Approved Thresholds</button>
+      <!-- <button id="format">Format</button>-->
+      <!--<div id="approval" style="display:none"> Approve: <input type="checkbox" label="Approve:" id="approved" data-role="none" /></div>-->
       </div>
-      <div class="middleColumn" style="clear:none">
-	<button id="fillPresentThresholds" class="niceButton">Fill Present Thresholds</button>
-	<button id="fillApprovedThresholds" class="niceButton">Fill Approved Thresholds</button>
       </div>
-      <div class="middleColumn" style="clear:none" data-role="none">
-	<button id="refreshPresent" class="niceButton">Refresh Present Values</button>
-	<button id="showAlarms" class="niceButton">Show Alarms</button>
+      <form data-inline="true">
+      <div class="ui-field-contain">
+	<legend>Choose Channels to display:</legend>
+	<select name="chooseChannels" id="chooseChannels" data-inline="true" data-native-menu="false">
+	  <option>Choose Channels...</option>
+	  <option value="alarms">Alarms</option>
+	  <option value="allChannels">All Channels</option>
+	  <option value="rack">Rack Voltages</option>
+	  <option value="timingrack">Timing Rack</option>
+	  <option value="xl3">XL3's</option>
+	  <option value="crate">Crate Currents</option>
+	  <option value="CompCoil">Comp Coils</option>
+	  <option value="holdup_rope">Hold-up Ropes</option>
+	  <option value="holddown_rope">Hold-down Ropes</option>
+	  <option value="equator_monitor">Equator Monitors</option>
+	  <option value="cover_gas">Cover Gas</option>
+	</select>
+	<button type="button" id="selectChannels" class="ui-btn	ui-btn-inline">Select</button>
+	<button type="button" id="enableChannels" class="ui-btn ui-mini ui-btn-inline" disabled>Enable All</button>
+	<button type="button" id="disableChannels" class="ui-btn ui-mini ui-btn-inline" disabled>Disable All</button>
+	<a href="#popupSave" data-rel="popup"
+	data-position-to="window" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-icon-check ui-btn-icon-left"
+	data-transition="pop">Save Changes</a>
+      <div data-role="popup" id="popupSave" class="ui-corner-all">
+	<form>
+      <div style="padding:10px 20px;">
+	<h3>Enter your name:</h3>
+	<label for="name-text" class="ui-hidden-accessible">Name:</label>
+	<input type="text" name="name-text" id="name-text" value="" placeholder="Name">
+	<button type="submit" id="saveThresholds" class="ui-btn ui-corner-all ui-shadow ui-btn-icon-left ui-icon-check">Submit Changes</button>
+      </div>
+      </form>
       </div>
       <div>
-	<p>Before saving thresholds, please enter your name:</p>
-	<div class="middleColumn" style="clear:none" data-role="none">
-	  <input type="text" name="name-text" id="name-text" value="" required></input>
-	</div>
-	<div class="middleColumn" style="clear:none" data-role="none">
-	  <input type="submit" id="saveThresholds" value="Save Thresholds">
-	</div>
+	<table>
+	  <tr>
+	    <td>
+	      <label for="showPresentThresholds">Show Present Thresholds:</label>
+	      <input type="checkbox" data-role="flipswitch" name="showPresentThresholds" id="showPresentThresholds">
+	    </td>
+	    <td>
+	      <label for="showApprovedThresholds">Show Approved Thresholds:</label>
+	      <input type="checkbox" data-role="flipswitch" name="showApprovedThreshold" id="showApprovedThresholds">
+	    </td>
+	  </tr>
+	  <tr>
+	    <td><button type="button" class="ui-btn ui-mini" id="fillPresentThresholds">Fill Present Thresholds</button></td>
+	    <td><button type="button" class="ui-btn ui-mini" id="fillApprovedThresholds">Fill Approved Thresholds</button></td>
+	  </tr>
+	</table>
       </div>
-      <!-- <button id="format" class="niceButton" data-role="none">Format</button>-->
-      <div id="approval" style="display:none"> Approve: <input type="checkbox" label="Approve:" id="approved" data-role="none" />
+      </form>
+      
       </div>
-      </div>
-      </div>
-      <p></p>
-
+      
       <div id="statustext"></div>
       <div id="statustext1"></div>
       <div class="header">
-      <div class="wideColumn">Channel Name</div>
-      <div class="narrowColumn">LoLo</div>
-      <div class="narrowColumn">Lo</div>
-      <div class="narrowColumn">Presently</div>
-      <div class="narrowColumn">Hi</div>
-      <div class="narrowColumn">HiHi</div>
-      <div class="narrowColumn">Enabled</div>
+      <table>
+	<tr>
+	  <td class="wide">Channel Name</td>
+	  <td class="narrow">LoLo</td>
+	  <td class="narrow">Lo</td>
+	  <td class="narrow">Presently</td>
+	  <td class="narrow">Hi</td>
+	  <td class="narrow">HiHi</td>
+	  <td class="narrow">is Enabled</td>
+	</tr>
+      </table>
       </div>
       <div id="everything"></div>
+      <div id="alarmsonly"></div>
       </div>
       </div>
 
       
       <div data-role="page" id="graphs">
-	<!--Graphs-->
       <div data-role="header" class="ui-state-persist" data-position="fixed">
 	<h1>Slow Control Alarms</h1>
 	<a href="http://snopl.us" data-icon="arrow-l">Return to snopl.us</a>
@@ -418,18 +336,16 @@
       </div>
       <div data-role="navbar">
           <ul>
-            <!--<li><a href="#alarmsoverview" data-icon="grid">Overview</a>-->
-	    <li><a href="#alarmsdetail" data-icon="bullets">Detail</a>
-	    <li><a href="#alarmslist" data-icon="alert">Alarm List</a>
-            <li><a href="#thresholds" data-icon="edit">Thresholds</a>
+	    <li><a href="#alarmsdetail" data-icon="grid">Overview</a>
+            <li><a href="#thresholds" data-icon="edit">Channel Thresholds</a>
             <li><a href="#graphs" class="ui-btn-active ui-state-persist" data-icon="bars">Graphs</a>
           </ul>
 	</div>
       </div>
       <p display="inline">Choose variable to plot:</p>
       <select id="name_dropdown" data-inline="true" width="200px"></select>
-      <button id="addplot" class="niceButton ui-btn ui-btn-inline ui-icon-plus ui-btn-icon-right">Add</button>
-      <button id="deleteplot" class="niceButton ui-btn ui-btn-inline ui-icon-delete ui-btn-icon-right">Delete</button>	
+      <button id="addplot" class="ui-btn ui-btn-inline ui-icon-plus ui-btn-icon-right">Add</button>
+      <button id="deleteplot" class="ui-btn ui-btn-inline ui-icon-delete ui-btn-icon-right">Delete</button>	
       <div id="graphstatus"></div>
       <div id="plots">
       </div>
